apps/devices-integrations-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devices-integration-api
  labels:
    app.kubernetes.io/name: devices-integration-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: bsis
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: devices-integration-api
  ports:
    - name: hl7
      port: 5601
      targetPort: hl7
      protocol: TCP
